--- a/villataika.fi/en/activities.html
+++ b/villataika.fi/en/activities.html
@@ -16,7 +16,7 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika :asian elegance Activities" />
+  <meta name="description" content="Bed & Breakfast Villa Taika : asian elegance Activities" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="en"/>  
   <title>Bed & Breakfast Villa Taika : Activities</title>
@@ -80,7 +80,7 @@
       </h3>
       <div id="news"> 
         <a href="news.html"> 
-          Redecorating and refurbishing for the new season 
+          Affordable accommodation in redocorated granery 
         </a>
       </div>
       <div class="divider"></div>
@@ -142,7 +142,7 @@
 	    <h2> Fiskars &amp; Bilnas Villages </h2>
         <img src="../activities/fiskars.jpg" >
         </a>
-    The beautifully restored art and craft centre of Fiskars is just a few minutes drive away. There are handicraft shops, workshops, cafees and restaurants. Bilnas, another old ironwork centre, is just over 10 minutes drive.
+    The beautifully restored art and craft centre of Fiskars is just a 5 minutes drive away. There are handicraft shops, workshops, cafes and restaurants. Bilnas, another old ironwork centre, is just over 10 minutes drive.
   </div>
 </div>
 
@@ -164,7 +164,7 @@
 	    <h2> Raasepori and Mustio </h2>
         <img src="../activities/raasepori.jpg" >
         </a>
-    The old stone castle of Raasepori, now the namesake of the region is close by. Also the grand castle of Mustio is just 15 minutes away.
+    The old stone castle of Raasepori, now the namesake of the region is close by. Also the grand castle of Mustio is just 15 minutes away where you can have a dinner or enjoy a cuppa by the lake.
   </div>
 </div>
 
@@ -175,7 +175,7 @@
 	    <h2> Group activities </h2>
         <img src="../activities/groups.jpg" >
         </a>
-    <a href="http://www.kdadventure.com/fi/activities/kursseja/">KD Adventure</a>, can arrange a variety of group activities, like several nature courses, themed evenings, coal walking and paintball.  Best of all, they are just next door, so you can enjoy a shower and warm bed after an adventourous day.
+    <a href="http://www.kdadventure.com/fi/activities/kursseja/">KD Adventure</a>, can arrange a variety of group activities, like nature courses,canoing, themed evenings, coal walking and paintball.  Best of all, they are just next door, so you can enjoy a shower and warm bed in Villa Taika, after an adventourous day.
   </div>
 </div>
 <div class='line'> &nbsp;</div>
