--- a/villataika.fi/en/bed.html
+++ b/villataika.fi/en/bed.html
@@ -16,7 +16,7 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika :asian elegance Bed &amp; Breakfast" />
+  <meta name="description" content="Bed & Breakfast Villa Taika : asian elegance Bed &amp; Breakfast" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="en"/>  
   <title>Bed & Breakfast Villa Taika : Bed &amp; Breakfast</title>
@@ -80,7 +80,7 @@
       </h3>
       <div id="news"> 
         <a href="news.html"> 
-          Redecorating and refurbishing for the new season 
+          Affordable accommodation in redocorated granery 
         </a>
       </div>
       <div class="divider"></div>
@@ -93,8 +93,8 @@
 
       <div class="wide_bed_box">
   <div class="bed_box">
-      Welcome to the charming and peaceful Villa Taika! <br> We have created unique B&B, with 8 individually decorated rooms. Inspired by our trips to the Orient , we brought that beauty and inspiration with us in the pieces of furniture, that we selected to our rooms. <br> We hope you will be revitalised in the beauty of our surroundings! <br>
-In the backyard we have a beautiful garden with the pond and waterfall. You can relax in the garden by listening to the soothing sound of the water or make trips to the nearby tourist sights. The Billnäs 15km, Mustio castle 15 km , beautiful towns of Tammisaari 35 km and Hanko 65km
+      Welcome to the charming and peaceful Villa Taika! <br> We have created unique B&B, with 8 individually decorated rooms. Inspired by our trips to the Orient , we brought that beauty and inspiration with us in the pieces of furniture, that we selected to our rooms. <br> We hope you will be revitalisedand rested in the beauty of our surroundings! <br>
+In the backyard we have a garden with the pond and waterfall. You can relax in the garden by listening to the soothing sound of the water or make trips to the nearby tourist sights. The Billnäs 15km, Mustio castle 15km, beautiful towns of Tammisaari 35 km and Hanko 65km
   </div>
 </div>
 <div class="divider"></div>
