--- a/villataika.fi/en/deluxe.html
+++ b/villataika.fi/en/deluxe.html
@@ -16,7 +16,7 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika :asian elegance Deluxe (w.toilet)" />
+  <meta name="description" content="Bed & Breakfast Villa Taika : asian elegance Deluxe (w.toilet)" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="en"/>  
   <title>Bed & Breakfast Villa Taika : Deluxe (w.toilet)</title>
@@ -80,7 +80,7 @@
       </h3>
       <div id="news"> 
         <a href="news.html"> 
-          Redecorating and refurbishing for the new season 
+          Affordable accommodation in redocorated granery 
         </a>
       </div>
       <div class="divider"></div>
@@ -99,7 +99,7 @@
         </a>
       </div>
       <h2> Green room </h2>
-      The <b>Green room</b>  is calm and peaceful room with a beautiful view of the garden. <br> There is a double bed in it and it fits another spare bed. It also has a small little cove, which fits a childs bed, and they love it.<br> There is an en-suite wc, and it shares a shower with the next door Orange room.<br> Orange and Green room together are a very good choice for small groups, or large families, as there is also a small lounge for these two rooms. <br> The price for two is 75€.
+      The <b>Green room</b>  is calm and peaceful room with a beautiful view of the garden. <br> There is a double bed  and it fits another spare bed. It also has a small little cove, which fits a childs bed, and they love it.<br> There is an en-suite wc, and it shares a shower with the next door Orange room.<br> Orange and Green room together are a very good choice for small groups, or large families, as there is also a small lounge for these two rooms. <br> The price for two is 75€ / Single 60€
     </div>
   </div>
   <div class="box">
@@ -110,7 +110,7 @@
         </a>
       </div>
       <h2> Orange room </h2>
-      The <b>Orange room</b>  has a warm and cosy atmosphere, with an asian feel to it.<br> There is a double bed and it can easily fit one adult or two children extra. <br> The room has a en-suite wc and shares a shower with the next door Green room. <br> From its second floor it has a beautiful view of the garden with its pond and  surrounding nature. <br> Orange and Green room together are a very good choice for small groups, or large families, as there is also a small lounge for these two rooms.<br> The price for two is 75€.
+      The <b>Orange room</b>  has a warm and cosy atmosphere, with a bright feel to it.<br> There is a double bed and it can fit one adult or two children extra. <br> The room has a en-suite wc and shares a shower with the next door Green room. <br> From its second floor it has a beautiful view of the garden with its pond and surrounding nature. <br> Orange and Green room together are a good choice for small groups, or large families, as there is also a small lounge for these two rooms.<br> The price for two is 75€.
     </div>
   </div>
 
