--- a/villataika.fi/en/groups.html
+++ b/villataika.fi/en/groups.html
@@ -16,7 +16,7 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika :asian elegance Groups" />
+  <meta name="description" content="Bed & Breakfast Villa Taika : asian elegance Groups" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="en"/>  
   <title>Bed & Breakfast Villa Taika : Groups</title>
@@ -80,7 +80,7 @@
       </h3>
       <div id="news"> 
         <a href="news.html"> 
-          Redecorating and refurbishing for the new season 
+          Affordable accommodation in redocorated granery 
         </a>
       </div>
       <div class="divider"></div>
@@ -105,7 +105,7 @@
 <div class="divider"> </div>
 <div class="left">
   <br>
-  Our beautifully decorated group space has a good size to allow many activities with enough space, be it jooga, dancing, body work or other group work. <br> Our garden is large and open, and well suited for both quiet and active work. <br> The greoup space is also well equipped with a high quality steoro system and a video project is available if needed. <br> For quit group work we have blankets and sitting cousions for participants. <br> During courses it is possible to use our large, wood heated sauna, and our small pool. <br> Off course we can accomodate 20 people comfortably in our 8 rooms, but up to 30 is possible using extra beds, and we also have a seperate room for the teacher<br> There are many local activities for groups that are not courses, see our <a href="activities.html">activities page</a>. <br> We offer vegetarian or vegan food, prepared with love. <br> Prices and details subject to negotiation. Full board prices with use of group room and sauna range from 50-65€, with prices depending on group size and food requirements. <br> <br>
+  Our beautifully decorated group space has a good size to allow many activities with enough space, be it yoga, dancing, body work or other group work. <br> Our garden is large and open, and well suited for quiet activities . <br> The group space is also well equipped with a high quality steoro system and a video projector is available if needed. <br> For quiet group work we have blankets and sitting cousions for participants. <br> During courses it is possible to use our large, wood heated sauna, and our small pool. <br> On the courses we can accomodate 25 people comfortably in our 8 rooms, but up to 30 is possible using extra beds, and we also have a seperate room for the teacher<br> There are many local activities for groups that are not courses, see our <a href="activities.html">activities page</a>. <br> We offer vegetarian or vegan food, prepared with love. <br> Prices and details subject to negotiation. Full board prices with use of group room and sauna range from 50-65€, with prices depending on group size and food requirements. <br> <br>
 </div>
 
 
