--- a/villataika.fi/en/index.html
+++ b/villataika.fi/en/index.html
@@ -16,7 +16,7 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika :asian elegance Home" />
+  <meta name="description" content="Bed & Breakfast Villa Taika : asian elegance Home" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="en"/>  
   <title>Bed & Breakfast Villa Taika : Home</title>
@@ -80,7 +80,7 @@
       </h3>
       <div id="news"> 
         <a href="news.html"> 
-          Redecorating and refurbishing for the new season 
+          Affordable accommodation in redocorated granery 
         </a>
       </div>
       <div class="divider"></div>
