--- a/villataika.fi/en/news.html
+++ b/villataika.fi/en/news.html
@@ -16,7 +16,7 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika :asian elegance News" />
+  <meta name="description" content="Bed & Breakfast Villa Taika : asian elegance News" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="en"/>  
   <title>Bed & Breakfast Villa Taika : News</title>
@@ -80,7 +80,7 @@
       </h3>
       <div id="news"> 
         <a href="news.html"> 
-          Redecorating and refurbishing for the new season 
+          Affordable accommodation in redocorated granery 
         </a>
       </div>
       <div class="divider"></div>
@@ -94,12 +94,12 @@
       <div class="news_box">
   <div class="box_inner">
       <div class="captioned_image">
-        <a href="../news/large/renovate.jpg" rel="lightbox" title="Redecorating and refurbishing for the new season">
+        <a href="../news/large/renovate.jpg" rel="lightbox" title="Affordable accommodation in redocorated granery">
           <img src="../news/renovate.jpg" height=100>
         </a>
       </div>
-    <h2> Redecorating and refurbishing for the new season </h2>
-    We have been busy redecorating old spaces and finishing off loose ends.
+    <h2> Affordable accommodation in redocorated granery </h2>
+    On the yard we have room granary 60€/ 2hh. Room is traditionally decorated. <br> Traditional log cabin that is decorated with afour poster bed. two peple can sleep in it. Shower and toilet are in the main building.
   </div>
 </div>
 <div class='line'> &nbsp;</div>
