--- a/villataika.fi/en/photos.html
+++ b/villataika.fi/en/photos.html
@@ -16,7 +16,7 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika :asian elegance Photos" />
+  <meta name="description" content="Bed & Breakfast Villa Taika : asian elegance Photos" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="en"/>  
   <title>Bed & Breakfast Villa Taika : Photos</title>
@@ -80,7 +80,7 @@
       </h3>
       <div id="news"> 
         <a href="news.html"> 
-          Redecorating and refurbishing for the new season 
+          Affordable accommodation in redocorated granery 
         </a>
       </div>
       <div class="divider"></div>
@@ -101,18 +101,18 @@
 </div>
 <div class="photo_box_w">
   <div class="eiole">
-    <a href="../photos/large/w_highview.jpg" rel="lightbox[photos]" title="Villa Taika from above">
-      <img src="../photos/w_highview.jpg"  >
+    <a href="../photos/large/w_terasse.jpg" rel="lightbox[photos]" title="Garden terasse">
+      <img src="../photos/w_terasse.jpg"  >
     </a><br/>
-    Villa Taika from above
+    Garden terasse
   </div>
 </div>
 <div class="photo_box_w">
   <div class="eiole">
-    <a href="../photos/large/w_peony.jpg" rel="lightbox[photos]" title="Lovely flowers in the garden">
+    <a href="../photos/large/w_peony.jpg" rel="lightbox[photos]" title="Fountain in the garden">
       <img src="../photos/w_peony.jpg"  >
     </a><br/>
-    Lovely flowers in the garden
+    Fountain in the garden
   </div>
 </div>
 <div class="photo_box_h">
@@ -133,18 +133,18 @@
 </div>
 <div class="photo_box_h">
   <div class="eiole">
-    <a href="../photos/large/h_lootus_wc.jpg" rel="lightbox[photos]" title="Lootus WC">
+    <a href="../photos/large/h_lootus_wc.jpg" rel="lightbox[photos]" title="Lotus suite toilet">
       <img src="../photos/h_lootus_wc.jpg"  >
     </a><br/>
-    Lootus WC
+    Lotus suite toilet
   </div>
 </div>
 <div class="photo_box_h">
   <div class="eiole">
-    <a href="../photos/large/h_lootus_wc.jpg" rel="lightbox[photos]" title="Lootus WC">
-      <img src="../photos/h_lootus_wc.jpg"  >
+    <a href="../photos/large/h_highview.jpg" rel="lightbox[photos]" title="Villa Taika from above">
+      <img src="../photos/h_highview.jpg"  >
     </a><br/>
-    Lootus WC
+    Villa Taika from above
   </div>
 </div>
 
