--- a/villataika.fi/en/standard.html
+++ b/villataika.fi/en/standard.html
@@ -16,7 +16,7 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika :asian elegance Standard (shared)" />
+  <meta name="description" content="Bed & Breakfast Villa Taika : asian elegance Standard (shared)" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="en"/>  
   <title>Bed & Breakfast Villa Taika : Standard (shared)</title>
@@ -80,7 +80,7 @@
       </h3>
       <div id="news"> 
         <a href="news.html"> 
-          Redecorating and refurbishing for the new season 
+          Affordable accommodation in redocorated granery 
         </a>
       </div>
       <div class="divider"></div>
@@ -94,12 +94,12 @@
         <div class="box">
     <div class="box_inner">
       <div class="captioned_image">
-        <a href="../images/rose.jpg" rel="lightbox[standard]" title="Roose room">
+        <a href="../images/rose.jpg" rel="lightbox[standard]" title="Rose room">
           <img src="../images/rose_small.jpg" >
         </a>
       </div>
-      <h2> Roose room </h2>
-      The <b>Rose room </b> is a cosy room with a romantic atmosphere. <br> It has a double bed and a cosy sofa for two. <br> It shares a toilet and shower with the next door Sky room. <br> Together with the sky room it is an ideal choice for large families or small groups up to five, as both rooms with their bathroom form an apartment.<br> The price for two is 75€.
+      <h2> Rose room </h2>
+      The <b>Rose room </b> is a cosy room with a romantic atmosphere. <br> It has a double bed and a cosy sofa for two. <br> It shares a toilet and shower with the next door Sky room. <br> Together with the sky room it is an ideal choice for large families or small groups up to five, as both rooms with their bathroom form an apartment.<br> The price for two is 75€/ Sinle 60€
     </div>
   </div>
   <div class="box">
@@ -110,7 +110,7 @@
         </a>
       </div>
       <h2> Sky room </h2>
-      The <b>Sky room </b> is a  charming  room with a peaceful atmosphere. <br> It shares a toilet and shower with the next door Rose room.  <br> Together with the sky room it is an ideal choice for large families or small groups up to five, as both rooms with their bathroom form an apartment.<br> There is a double bed, and space for an extra bed on request. <br> The price for two is 75€.
+      The <b>Sky room </b> is a  charming  room with a peaceful atmosphere. <br> It shares a toilet and shower with the next door Rose room.  <br> Together with the sky room it is an ideal choice for large families or small groups up to five, as both rooms with their bathroom form an apartment.<br> There is a double bed, and space for an extra bed on request. <br> The price for two is 75€/ Single 60€
     </div>
   </div>
 
