--- a/villataika.fi/en/suites.html
+++ b/villataika.fi/en/suites.html
@@ -16,7 +16,7 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika :asian elegance Suites (w.shower)" />
+  <meta name="description" content="Bed & Breakfast Villa Taika : asian elegance Suites (w.shower)" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="en"/>  
   <title>Bed & Breakfast Villa Taika : Suites (w.shower)</title>
@@ -80,7 +80,7 @@
       </h3>
       <div id="news"> 
         <a href="news.html"> 
-          Redecorating and refurbishing for the new season 
+          Affordable accommodation in redocorated granery 
         </a>
       </div>
       <div class="divider"></div>
@@ -99,7 +99,7 @@
         </a>
       </div>
       <h2> Lotus Suite </h2>
-      The <b>Lotus Suite</b>  is a charming and spacious flat of about 40 m², with a royal touch. <br> It has it's own bathroom with shower and toilet, and a <b>private terasse</b>. <br> One can get a glimpse of the  nearby lake, and the terasse is a perfect place to enjoy the morning in the sun. <br> There is a double bed, and plenty of space for up to three extra beds on request. <br> The suite is also very well suited for wedding couples. We offer a <b>wedding package</b> which includes extra decoration, including flowers and candles, and breakfeast can be served privately to the room or terasse.<br> The price for two is 95€. (Weddingpackage is 135€ for two)
+      The <b>Lotus Suite</b>  is a charming and spacious flat of about 40 m², with asian elegance. <br> It has it's own bathroom with shower and toilet, and a <b>private terasse</b>. <br> One can get a glimpse of the  nearby lake, and the terasse is a perfect place to enjoy the morning in the sun. <br> There is a double bed, and plenty of space for up to three extra beds on request. <br> The suite is also very well suited for wedding couples. We offer a <b>wedding package</b> which includes extra decoration with flowers and candles, and breakfeast can be served privately to the room or terasse.<br> The room price for two is 95€. (Weddingpackage is 135€ for two)
     </div>
   </div>
   <div class="box">
@@ -110,7 +110,7 @@
         </a>
       </div>
       <h2> Sun suite </h2>
-      The <b>Sun suite</b> is an elegant, sunny and spacious room. <br> Traditional timberframing gives the room a rustic touch which counterpoints the elegant interiour with beautiful teak furniture.<br> Facing south with large windows there is a very sunny and light feeling in the room. Also very spacious as the ceilings are over 3m high.<br> Shower and toilet are ensuite. There is a double bed and a space to fit two extra beds.<br> The price for two is 90€/75€ single
+      The <b>Sun suite</b> is an elegant, sunny and spacious room. <br> Traditional timberframing gives the room a rustic touch which counterpoints the elegant interiour with beautiful teak furniture.<br> Facing south with large windows there is a sunny and light feeling in the room. Alsoit feels spacious as the ceilings are over 3m high.<br> Shower and toilet are ensuite. There is a double bed and a space to fit two extra beds.<br> The price for two is 90€/75€ single
     </div>
   </div>
   <div class="box">
@@ -121,7 +121,7 @@
         </a>
       </div>
       <h2> Amethyst room </h2>
-      The <b>Amethyst</b> room is a light and sunny 15m² room with a mixed asian interiour. <br> The room has is south facing  with large windows and high ceiling that give it a very spacious feel.<br> There is a private bathroom with shower and a double bed. One extra bed can be arranged. <br> The price for two is 85€/70€ single
+      The <b>Amethyst</b> room is a light and sunny 15m² room with handcarved relief. <br> The room has is south facing  with large windows and high ceiling that give it a spacious feel.<br> There is a private bathroom with shower and a double bed. One extra bed can be arranged. <br> The price for two is 85€/70€ single
     </div>
   </div>
 
