--- a/villataika.fi/fi/activities.html
+++ b/villataika.fi/fi/activities.html
@@ -16,10 +16,10 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika :taianomaista tyylikkyyttä Tekemista" />
+  <meta name="description" content="Bed & Breakfast Villa Taika : taianomaista tyylikkyyttä Tekemistä" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="fi"/>  
-  <title>Bed & Breakfast Villa Taika : Tekemista</title>
+  <title>Bed & Breakfast Villa Taika : Tekemistä</title>
   
 </head>
 
@@ -53,7 +53,7 @@
             <a href="photos.html">Kuvat</a><span>&nbsp;</span>
           </li>
           <li class="active">
-            <a href="activities.html">Tekemista</a><span>&nbsp;</span>
+            <a href="activities.html">Tekemistä</a><span>&nbsp;</span>
           </li>
       </ul>
     </div>
@@ -63,9 +63,9 @@
           <span>Huoneet</span>
       </h3>
       <ul class="divided">
-        <li><a href="suites.html">Suites (w.shower)</a></li>
-        <li><a href="deluxe.html">Deluxe (w.toilet)</a></li>
-        <li><a href="standard.html">Standard (shared)</a></li>
+        <li><a href="suites.html">Sviitit (suihkulla)</a></li>
+        <li><a href="deluxe.html">Deluxe (wc:llä)</a></li>
+        <li><a href="standard.html">Standard (jaettu)</a></li>
       </ul>
 
       <div class="divider"></div>
@@ -80,7 +80,7 @@
       </h3>
       <div id="news"> 
         <a href="news.html"> 
-          Seasonki alkaa , nyt myös mökki huone ulkona 
+          Edullinen majoitus kauniissa ulko aitassamme. 
         </a>
       </div>
       <div class="divider"></div>
@@ -105,11 +105,11 @@
 
 <div class="activity_box">
   <div class="box_inner">
-      <a href="../activities/large/forest.jpg" rel="lightbox[activity]" title="Walk or cycle through woods">
-	    <h2> Walk or cycle through woods </h2>
+      <a href="../activities/large/forest.jpg" rel="lightbox[activity]" title="Kävelyä tai pyöräilyä lähimetsissä">
+	    <h2> Kävelyä tai pyöräilyä lähimetsissä </h2>
         <img src="../activities/forest.jpg" >
         </a>
-    There are many unpaved paths through the surrounding nature reseve. Bring your own bicycle, get one from us or walk to explore the surrounding nature.
+    Metsissä löytyy pikkupolkuja, joilla voi patikoida tai pyöräillä. Voit tehdä lyhyitäkin retkiä läheiseen Iso-Simin luonnonsuojelualueelle. Tuo retkipyörä mukanasi, mutta meiltä saat pyörän lainaksi, jos haluat vaikka Fiskarsiin pyöräillä
   </div>
 </div>
 <div class='line'> &nbsp;</div>
@@ -160,22 +160,22 @@
 
 <div class="activity_box">
   <div class="box_inner">
-      <a href="../activities/large/raasepori.jpg" rel="lightbox[activity]" title="Raasepori Castle">
-	    <h2> Raasepori Castle </h2>
+      <a href="../activities/large/raasepori.jpg" rel="lightbox[activity]" title="Raaseporin linna ja Mustio">
+	    <h2> Raaseporin linna ja Mustio </h2>
         <img src="../activities/raasepori.jpg" >
         </a>
-    Raaseporin vanhat ja komeat linnarauniot ovat alle puolentunnin matkan päässä. Ja upea Mustion linna ja   sen kaunis puutarha vain 20 min ajomatkan päässä. Mustiossa on myös tunnelmallinen ravintola,jossa voi pistäytyä.
+    Raaseporin vanhat ja komeat linnarauniot ovat alle puolentunnin matkan päässä. Ja upea Mustion linna ja sen kaunis puutarha vain, 20 min ajomatkan päässä.Mustiossa on myös tunnelmallinen ravintola,jossa voi aterioida tai juoda kupposen kahvia.
   </div>
 </div>
 
 
 <div class="activity_box">
   <div class="box_inner">
-      <a href="../activities/large/groups.jpg" rel="lightbox[activity]" title="Group activities">
-	    <h2> Group activities </h2>
+      <a href="../activities/large/groups.jpg" rel="lightbox[activity]" title="Ryhmille">
+	    <h2> Ryhmille </h2>
         <img src="../activities/groups.jpg" >
         </a>
-    <a href="http://www.kdadventure.com/fi/activities/kursseja/">KD Adventure</a> Naapurissamme toimiva yritys voi järjestää ryhmille toimintaa. Vaikkapa luontoretkiä, kanoottiretkiä ,paintballia  tai tulisilla hiilillä kävelyä uskaliaimmille.
+    <a href="http://www.kdadventure.com/fi/activities/kursseja/">KD Adventure</a> Naapurissamme toimiva yritys voi järjestää ryhmille toimintaa. Vaikkapa luontoretkiä, kanoottiretkiä, paintballia  tai tulisilla hiilillä kävelyä uskaliaimmille.
   </div>
 </div>
 <div class='line'> &nbsp;</div>
