--- a/villataika.fi/fi/bed.html
+++ b/villataika.fi/fi/bed.html
@@ -16,7 +16,7 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika :taianomaista tyylikkyyttä Bed &amp; Breakfast" />
+  <meta name="description" content="Bed & Breakfast Villa Taika : taianomaista tyylikkyyttä Bed &amp; Breakfast" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="fi"/>  
   <title>Bed & Breakfast Villa Taika : Bed &amp; Breakfast</title>
@@ -53,7 +53,7 @@
             <a href="photos.html">Kuvat</a><span>&nbsp;</span>
           </li>
           <li >
-            <a href="activities.html">Tekemista</a><span>&nbsp;</span>
+            <a href="activities.html">Tekemistä</a><span>&nbsp;</span>
           </li>
       </ul>
     </div>
@@ -63,9 +63,9 @@
           <span>Huoneet</span>
       </h3>
       <ul class="divided">
-        <li><a href="suites.html">Suites (w.shower)</a></li>
-        <li><a href="deluxe.html">Deluxe (w.toilet)</a></li>
-        <li><a href="standard.html">Standard (shared)</a></li>
+        <li><a href="suites.html">Sviitit (suihkulla)</a></li>
+        <li><a href="deluxe.html">Deluxe (wc:llä)</a></li>
+        <li><a href="standard.html">Standard (jaettu)</a></li>
       </ul>
 
       <div class="divider"></div>
@@ -80,7 +80,7 @@
       </h3>
       <div id="news"> 
         <a href="news.html"> 
-          Seasonki alkaa , nyt myös mökki huone ulkona 
+          Edullinen majoitus kauniissa ulko aitassamme. 
         </a>
       </div>
       <div class="divider"></div>
@@ -93,7 +93,7 @@
 
       <div class="wide_bed_box">
   <div class="bed_box">
-      Tervetuloa viehättävään Villa Taikaan!Olemme luoneet B&B;n, jossa jokainen huone on uniikisti sisustettu. Matkoillamme Aasiaan olemme usein lumoutuneet sen kauneudesta. Valitsimme huoneisiimme uniikit huonekalut muistuttamaan ja inspiroimaan elämän ainutlaatuisesta kauneudesta. Toivomme että sinäkin nautit siitä täällä luonamme Villa Taiassa!    Meillä on suuri puutarha vesiputouksineen ja pihalampineen . Siellä voit nauttia olostasi vesiputouksen solinaa kuunnellen.Voit myös tehdä retkiä lähiympäristöön. Billnäsin ruukki 15km, Mustion linna 15km, Tammisaari 35km, Hanko 65km. Tulopäivänä huoneeseen voi saapua klo 14-19. Ilmoitathan saapumisajan etukäteen!! Huone luovutetaan klo 12 mennessä.
+      Tervetuloa viehättävään Villa Taikaan! <br>Olemme luoneet B&B;n, jossa jokainen huone on uniikisti sisustettu. <br> Matkoillamme Aasiaan olemme usein lumoutuneet sen kauneudesta. Valitsimme huoneisiimme yksilölliset huonekalut muistuttamaan ja inspiroimaan elämän ainutlaatuisesta kauneudesta. <br> Toivomme että sinäkin nautit siitä täällä luonamme Villa Taiassa! <br>Meillä on suuri puutarha vesiputouksineen ja pihalampineen . Siellä voit nauttia olostasi vesiputouksen solinaa kuunnellen. <br> <br> Tulopäivänä huoneeseen voi saapua klo 14-19. Ilmoitathan saapumisajan etukäteen!! Huone luovutetaan klo 12 mennessä.<br>Voit myös tehdä retkiä lähiympäristöön. Billnäsin ruukki 15km, Mustion linna 15km, Tammisaari 35km.
   </div>
 </div>
 <div class="divider"></div>
@@ -102,30 +102,30 @@
     <br/>
   <div class="small_box">
     <a href="suites.html">
-      Suites (w.shower) 
+      Sviitit (suihkulla) 
       <img src="../images/sun_small.jpg"  
-          alt=shortSuites (w.shower)  
+          alt=shortSviitit (suihkulla)  
           height=187px  width=250px />
 </a>    <br/>
-    3 suites with own shower 85/90/95
+    3 sviittiä omalla suihkulla 85/90/95
   </div>
   <div class="small_box">
     <a href="deluxe.html">
-    Deluxe (w.toilet) 
-      <img src="../images/orange_small.jpg"  
-          alt=shortDeluxe (w.toilet)  
+    Deluxe (wc:llä) 
+      <img src="/images/orange_small.jpg"  
+          alt=shortDeluxe (wc:llä)  
           height=187px  width=250px />
 </a>    <br/>
-    2 rooms with toilet inside (upstairs) 75
+    2 huonetta omalla wc:llä (yläkerrassa) 75€/2hh ja 60€/1hh
   </div>
   <div class="small_box">
     <a href="standard.html">
-    Standard (shared) 
+    Standard (jaettu) 
       <img src="../images/rose_small.jpg"  
-          alt="shortStandard (shared)"  
+          alt="shortStandard (jaettu)"  
           height=187px  width=250px />
 </a>    <br/>
-    2 rooms which share one shower, 75
+    2 huonetta, jotka jakavat yhteisen suihkun, 75€/2hh ja 60€/1hh
   </div>
 </div>
 <br/>
