--- a/villataika.fi/fi/groups.html
+++ b/villataika.fi/fi/groups.html
@@ -16,7 +16,7 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika :taianomaista tyylikkyyttä Ryhmille" />
+  <meta name="description" content="Bed & Breakfast Villa Taika : taianomaista tyylikkyyttä Ryhmille" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="fi"/>  
   <title>Bed & Breakfast Villa Taika : Ryhmille</title>
@@ -53,7 +53,7 @@
             <a href="photos.html">Kuvat</a><span>&nbsp;</span>
           </li>
           <li >
-            <a href="activities.html">Tekemista</a><span>&nbsp;</span>
+            <a href="activities.html">Tekemistä</a><span>&nbsp;</span>
           </li>
       </ul>
     </div>
@@ -63,9 +63,9 @@
           <span>Huoneet</span>
       </h3>
       <ul class="divided">
-        <li><a href="suites.html">Suites (w.shower)</a></li>
-        <li><a href="deluxe.html">Deluxe (w.toilet)</a></li>
-        <li><a href="standard.html">Standard (shared)</a></li>
+        <li><a href="suites.html">Sviitit (suihkulla)</a></li>
+        <li><a href="deluxe.html">Deluxe (wc:llä)</a></li>
+        <li><a href="standard.html">Standard (jaettu)</a></li>
       </ul>
 
       <div class="divider"></div>
@@ -80,7 +80,7 @@
       </h3>
       <div id="news"> 
         <a href="news.html"> 
-          Seasonki alkaa , nyt myös mökki huone ulkona 
+          Edullinen majoitus kauniissa ulko aitassamme. 
         </a>
       </div>
       <div class="divider"></div>
@@ -100,12 +100,13 @@
   <img src ="../images/garden_group.jpg" height="196" width="140px">
 </div>
 <div class="right">
-  Ryhmätila on 75 m2. Voimme majoittaa 25 ihmistä 7:ään huoneeseemme. Ryhmätilaa on mahdollista käyttää myös majoitukseen. Tarjoamme täysipainoista kasvisruokaa kursseillamme. Pihamme on iso ja avoin. Sitä voi käyttää ryhmäharjoituksiin. Kurssin aikana on mahdollista saunoa puulämmitteisessä saunassamme.
+  <ul> <li>iso ryhmätila</li> <li> iso puutarha</li> <li> korkealuokkaiset äänentoisto laitteet</li> <li> videotykki</li> <li istuintyynyjä ja peittoja salissa</li> <li> puulämmitteinen sauna</li> <li>  majoitus 20-30 hlö</li> <li>opettajalle oma huone</li> <li>kasvisruoka</li> </ul>
 </div>
 <div class="divider"> </div>
 <div class="left">
   <br>
-  Talomme sijaitsee erittäin luonnonkauniissa ympäristössä. Kävelymatkan päässä on 5 eri järveä ja luonnonsuojelualue. Ota yhteyttä!
+  Ryhmätila on 75 m2. Kauniisti sisustettu ryhmätilamme sopii joogaan, tanssiin, kehotyöskentelyyn etc.  <br> Voimme majoittaa 25 ihmistä mukavasti 8:aan huoneeseemme, mutta tarvittaessa 30 mahtuu lisävuoteisiimme.<br> Ryhmätilaa on mahdollista käyttää myös majoitukseen.<br> ryhmätilassa on korkealuokkaiset äänentoisto laitteet ja videotykki tarvittaessa.<br> Tarjoamme täysipainoista kasvisruokaa, joka on valmistettu rakkaudella..<br> Pihamme on iso ja avoin. Sitä voi käyttää hiljaisiin ryhmäharjoituksiin.<br> Kurssin aikana on mahdollista saunoa puulämmitteisessä saunassamme.<br> Hinnasta ja yksityiskohdista voimme neuvotella. Täysihoito on 50-65€, riippuen ryhmän koosta ja ruokatoiveista.<br>
+Talomme sijaitsee erittäin luonnonkauniissa ympäristössä. Kävelymatkan päässä on 5 eri järveä ja luonnonsuojelualue. Ota yhteyttä!
 </div>
 
 
