--- a/villataika.fi/fi/news.html
+++ b/villataika.fi/fi/news.html
@@ -16,7 +16,7 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika :taianomaista tyylikkyyttä Uutiset" />
+  <meta name="description" content="Bed & Breakfast Villa Taika : taianomaista tyylikkyyttä Uutiset" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="fi"/>  
   <title>Bed & Breakfast Villa Taika : Uutiset</title>
@@ -53,7 +53,7 @@
             <a href="photos.html">Kuvat</a><span>&nbsp;</span>
           </li>
           <li >
-            <a href="activities.html">Tekemista</a><span>&nbsp;</span>
+            <a href="activities.html">Tekemistä</a><span>&nbsp;</span>
           </li>
       </ul>
     </div>
@@ -63,9 +63,9 @@
           <span>Huoneet</span>
       </h3>
       <ul class="divided">
-        <li><a href="suites.html">Suites (w.shower)</a></li>
-        <li><a href="deluxe.html">Deluxe (w.toilet)</a></li>
-        <li><a href="standard.html">Standard (shared)</a></li>
+        <li><a href="suites.html">Sviitit (suihkulla)</a></li>
+        <li><a href="deluxe.html">Deluxe (wc:llä)</a></li>
+        <li><a href="standard.html">Standard (jaettu)</a></li>
       </ul>
 
       <div class="divider"></div>
@@ -80,7 +80,7 @@
       </h3>
       <div id="news"> 
         <a href="news.html"> 
-          Seasonki alkaa , nyt myös mökki huone ulkona 
+          Edullinen majoitus kauniissa ulko aitassamme. 
         </a>
       </div>
       <div class="divider"></div>
@@ -93,15 +93,25 @@
 
       <div class="news_box">
   <div class="box_inner">
-    <h2> Seasonki alkaa , nyt myös mökki huone ulkona </h2>
-    Hirsi ja hieno
+      <div class="captioned_image">
+        <a href="../news/large/renovate.jpg" rel="lightbox" title="Edullinen majoitus kauniissa ulko aitassamme.">
+          <img src="../news/renovate.jpg" height=100>
+        </a>
+      </div>
+    <h2> Edullinen majoitus kauniissa ulko aitassamme. </h2>
+    Ulko aitassamme on edullinen majoitusvaihtoehto 60€/ 2hh. Huone on tyylikäs ja tunnelmallinen. <br> Perinteisen kauniin hirsi seinän kanssa on kultainen pylvässänky. Huoneeseen mahtuu 2 hlöä. Suihku ja wc ovat päärakennuksessa. Halutessasi voit käyttää biologista, kemiallista wc:tä
   </div>
 </div>
 <div class='line'> &nbsp;</div>
 <div class="news_box">
   <div class="box_inner">
-    <h2> <span class="translation_missing">fi, news, eco, short</span> </h2>
-    <span class="translation_missing">fi, news, eco, rest</span>
+      <div class="captioned_image">
+        <a href="../news/large/renewable.jpg" rel="lightbox" title="Uusiutuva energia">
+          <img src="../news/renewable.jpg" height=100>
+        </a>
+      </div>
+    <h2> Uusiutuva energia </h2>
+    Villa Taika käyttää vain uusiutuvia energiamuotoja <br> Olemme asentaneet uuden puupannun Villa Taikaan. Moderni puupannu tuottaa suurimman osan talomme energiasta. Mutta vesikiertoinen takkamme tuo osansa talon lämmitys energiasta. <br> Lisäksi asensimme erittäin energia taloudellisen ilmalämpöpumpun aamiaissaliimme.<br> Kaikki talomme käyttämä sähkö on yrityksestä, joka myy ainoastaan tuuli-ja vesi sähköä. Yrityksen nimi on Kraft&Kultur.
   </div>
 </div>
 <div class='line'> &nbsp;</div>
