--- a/villataika.fi/fi/photos.html
+++ b/villataika.fi/fi/photos.html
@@ -16,7 +16,7 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika :taianomaista tyylikkyyttä Kuvat" />
+  <meta name="description" content="Bed & Breakfast Villa Taika : taianomaista tyylikkyyttä Kuvat" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="fi"/>  
   <title>Bed & Breakfast Villa Taika : Kuvat</title>
@@ -53,7 +53,7 @@
             <a href="photos.html">Kuvat</a><span>&nbsp;</span>
           </li>
           <li >
-            <a href="activities.html">Tekemista</a><span>&nbsp;</span>
+            <a href="activities.html">Tekemistä</a><span>&nbsp;</span>
           </li>
       </ul>
     </div>
@@ -63,9 +63,9 @@
           <span>Huoneet</span>
       </h3>
       <ul class="divided">
-        <li><a href="suites.html">Suites (w.shower)</a></li>
-        <li><a href="deluxe.html">Deluxe (w.toilet)</a></li>
-        <li><a href="standard.html">Standard (shared)</a></li>
+        <li><a href="suites.html">Sviitit (suihkulla)</a></li>
+        <li><a href="deluxe.html">Deluxe (wc:llä)</a></li>
+        <li><a href="standard.html">Standard (jaettu)</a></li>
       </ul>
 
       <div class="divider"></div>
@@ -80,7 +80,7 @@
       </h3>
       <div id="news"> 
         <a href="news.html"> 
-          Seasonki alkaa , nyt myös mökki huone ulkona 
+          Edullinen majoitus kauniissa ulko aitassamme. 
         </a>
       </div>
       <div class="divider"></div>
@@ -93,58 +93,58 @@
 
       <div class="photo_box_w">
   <div class="eiole">
-    <a href="../photos/large/w_frogs.jpg" rel="lightbox[photos]" title="Sammakot">
+    <a href="../photos/large/w_frogs.jpg" rel="lightbox[photos]" title="<span class="translation_missing">fi, photos, w_frogs</span>">
       <img src="../photos/w_frogs.jpg"  >
     </a><br/>
-    Sammakot
+    <span class="translation_missing">fi, photos, w_frogs</span>
   </div>
 </div>
 <div class="photo_box_w">
   <div class="eiole">
-    <a href="../photos/large/w_highview.jpg" rel="lightbox[photos]" title="Villa Taika kokealta">
-      <img src="../photos/w_highview.jpg"  >
+    <a href="../photos/large/w_terasse.jpg" rel="lightbox[photos]" title="<span class="translation_missing">fi, photos, w_terasse</span>">
+      <img src="../photos/w_terasse.jpg"  >
     </a><br/>
-    Villa Taika kokealta
+    <span class="translation_missing">fi, photos, w_terasse</span>
   </div>
 </div>
 <div class="photo_box_w">
   <div class="eiole">
-    <a href="../photos/large/w_peony.jpg" rel="lightbox[photos]" title="Kukkat putharassa">
+    <a href="../photos/large/w_peony.jpg" rel="lightbox[photos]" title="Suihkulähde">
       <img src="../photos/w_peony.jpg"  >
     </a><br/>
-    Kukkat putharassa
+    Suihkulähde
   </div>
 </div>
 <div class="photo_box_h">
   <div class="eiole">
-    <a href="../photos/large/h_aurinko_wc.jpg" rel="lightbox[photos]" title="<span class="translation_missing">fi, photos, h_aurinko_wc</span>">
+    <a href="../photos/large/h_aurinko_wc.jpg" rel="lightbox[photos]" title="Aurinko wc">
       <img src="../photos/h_aurinko_wc.jpg"  >
     </a><br/>
-    <span class="translation_missing">fi, photos, h_aurinko_wc</span>
+    Aurinko wc
   </div>
 </div>
 <div class="photo_box_h">
   <div class="eiole">
-    <a href="../photos/large/h_curves.jpg" rel="lightbox[photos]" title="<span class="translation_missing">fi, photos, h_curves</span>">
+    <a href="../photos/large/h_curves.jpg" rel="lightbox[photos]" title="Aurinko sviitin kaiverrukset">
       <img src="../photos/h_curves.jpg"  >
     </a><br/>
-    <span class="translation_missing">fi, photos, h_curves</span>
+    Aurinko sviitin kaiverrukset
   </div>
 </div>
 <div class="photo_box_h">
   <div class="eiole">
-    <a href="../photos/large/h_lootus_wc.jpg" rel="lightbox[photos]" title="<span class="translation_missing">fi, photos, h_lootus_wc</span>">
+    <a href="../photos/large/h_lootus_wc.jpg" rel="lightbox[photos]" title="Lootus WC">
       <img src="../photos/h_lootus_wc.jpg"  >
     </a><br/>
-    <span class="translation_missing">fi, photos, h_lootus_wc</span>
+    Lootus WC
   </div>
 </div>
 <div class="photo_box_h">
   <div class="eiole">
-    <a href="../photos/large/h_lootus_wc.jpg" rel="lightbox[photos]" title="<span class="translation_missing">fi, photos, h_lootus_wc</span>">
-      <img src="../photos/h_lootus_wc.jpg"  >
+    <a href="../photos/large/h_highview.jpg" rel="lightbox[photos]" title="Villa Taika korkealta">
+      <img src="../photos/h_highview.jpg"  >
     </a><br/>
-    <span class="translation_missing">fi, photos, h_lootus_wc</span>
+    Villa Taika korkealta
   </div>
 </div>
 
