--- a/villataika.fi/fi/standard.html
+++ b/villataika.fi/fi/standard.html
@@ -16,10 +16,10 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika :taianomaista tyylikkyyttä Standard (shared)" />
+  <meta name="description" content="Bed & Breakfast Villa Taika : taianomaista tyylikkyyttä Standard (jaettu)" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="fi"/>  
-  <title>Bed & Breakfast Villa Taika : Standard (shared)</title>
+  <title>Bed & Breakfast Villa Taika : Standard (jaettu)</title>
   
 </head>
 
@@ -53,7 +53,7 @@
             <a href="photos.html">Kuvat</a><span>&nbsp;</span>
           </li>
           <li >
-            <a href="activities.html">Tekemista</a><span>&nbsp;</span>
+            <a href="activities.html">Tekemistä</a><span>&nbsp;</span>
           </li>
       </ul>
     </div>
@@ -63,9 +63,9 @@
           <span>Huoneet</span>
       </h3>
       <ul class="divided">
-        <li><a href="suites.html">Suites (w.shower)</a></li>
-        <li><a href="deluxe.html">Deluxe (w.toilet)</a></li>
-        <li><a href="standard.html">Standard (shared)</a></li>
+        <li><a href="suites.html">Sviitit (suihkulla)</a></li>
+        <li><a href="deluxe.html">Deluxe (wc:llä)</a></li>
+        <li><a href="standard.html">Standard (jaettu)</a></li>
       </ul>
 
       <div class="divider"></div>
@@ -80,7 +80,7 @@
       </h3>
       <div id="news"> 
         <a href="news.html"> 
-          Seasonki alkaa , nyt myös mökki huone ulkona 
+          Edullinen majoitus kauniissa ulko aitassamme. 
         </a>
       </div>
       <div class="divider"></div>
@@ -99,7 +99,7 @@
         </a>
       </div>
       <h2> Ruusu huone </h2>
-      <b>Ruusu huone </b>on romanttinen huone. Huoneessa on parisänky, ja COSY sohva. Sillä on yhteinen wc ja suihku Taivas huoneen kanssa. Hinta on 75€ /2hh
+      <b>Ruusu huone </b>on romanttinen huone. Huoneessa on parisänky, ja mukava sohva. Sillä on yhteinen wc ja suihku viereisen Taivas huoneen kanssa.<br> Yhdessä Taivas huoneen kanssa, se sopii erinomaisesti isolle perheelle tai pienelle ryhmälle.<br> Hinta on 75€ /2hh ja 60€/1hh
     </div>
   </div>
   <div class="box">
@@ -110,7 +110,7 @@
         </a>
       </div>
       <h2> Taivas huone </h2>
-      <b>Taivas huone </b>on viehkeä huone. Sillä on yhteinen wc ja suihku Ruusu huoneen vieressa. Huoneessa on parisänky, ja siellä on lisävuode jo valmiina. Hinta on 75€ /2hh
+      <b>Taivas huone </b>on rauhoittava ja  viehkeä huone. Sillä on yhteinen wc ja suihku viereisen Ruusu huoneen kanssa. Huoneessa on parisänky, ja sinne saa lisävuoteen tai kaksi tarvittaessa.. Yhdessä Ruusu huoneen kanssa, se sopii erinomaisesti isolle perheelle tai pienelle ryhmälle.<br> Hinta on 75€ /2hh ja 60€/ 1hh
     </div>
   </div>
 
