--- a/villataika.fi/fi/suites.html
+++ b/villataika.fi/fi/suites.html
@@ -16,10 +16,10 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika :taianomaista tyylikkyyttä Suites (w.shower)" />
+  <meta name="description" content="Bed & Breakfast Villa Taika : taianomaista tyylikkyyttä Sviitit (suihkulla)" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="fi"/>  
-  <title>Bed & Breakfast Villa Taika : Suites (w.shower)</title>
+  <title>Bed & Breakfast Villa Taika : Sviitit (suihkulla)</title>
   
 </head>
 
@@ -53,7 +53,7 @@
             <a href="photos.html">Kuvat</a><span>&nbsp;</span>
           </li>
           <li >
-            <a href="activities.html">Tekemista</a><span>&nbsp;</span>
+            <a href="activities.html">Tekemistä</a><span>&nbsp;</span>
           </li>
       </ul>
     </div>
@@ -63,9 +63,9 @@
           <span>Huoneet</span>
       </h3>
       <ul class="divided">
-        <li><a href="suites.html">Suites (w.shower)</a></li>
-        <li><a href="deluxe.html">Deluxe (w.toilet)</a></li>
-        <li><a href="standard.html">Standard (shared)</a></li>
+        <li><a href="suites.html">Sviitit (suihkulla)</a></li>
+        <li><a href="deluxe.html">Deluxe (wc:llä)</a></li>
+        <li><a href="standard.html">Standard (jaettu)</a></li>
       </ul>
 
       <div class="divider"></div>
@@ -80,7 +80,7 @@
       </h3>
       <div id="news"> 
         <a href="news.html"> 
-          Seasonki alkaa , nyt myös mökki huone ulkona 
+          Edullinen majoitus kauniissa ulko aitassamme. 
         </a>
       </div>
       <div class="divider"></div>
@@ -99,7 +99,7 @@
         </a>
       </div>
       <h2> Lootus sviitti </h2>
-      <b>Lootus sviitti </b> on viehättävä huoneisto 40m2. Siihen kuuluu oma wc ja suihku, sekä terassi , jolta pilkottaa läheinen järvi. Huoneessa on parisänky ja sinne mahtuu 3 tai 4 lisävuodetta. <br>  <br> Sviitti sopii myös hääpareille. Hääpaketti sisältää huoneen ja lisäkoristelun kukkasilla ja kynttilöillä. Aamupala haluttaessa oneityisesti sään salliessa omalla terassilla.
+      <b>Lootus sviitti </b> on viehättävä , aasialaisella tyylikkyydellä sisustettu huoneisto 40m².<br> Siihen kuuluu oma wc ja suihku, sekä terassi , jolta pilkottaa läheinen järvi.<br> Huoneessa on parisänky ja sinne mahtuu 3 tai 4 lisävuodetta. <br>  <br> Sviitti sopii myös hääpareille. Hääpaketti sisältää huoneen ja lisäkoristelun kukkasilla ja kynttilöillä. Aamupala haluttaessa sään salliessa omalla terassilla. <br> Hinta on 95€ /2hh. (Hääpaketti on 135€ /2hh)
     </div>
   </div>
   <div class="box">
@@ -110,8 +110,7 @@
         </a>
       </div>
       <h2> Aurinko sviitti </h2>
-      <b>Aurinko sviitti</b> on valoisa ja tyylikäs 25m2 sviitti. Perinteisellä hirsirakennus tekniikalla rakennetut kaaret tuovat oman lisänsä tyylikkäillä tiikki huonekaluilla sisustettuun huoneseen.
-Siellä on parisänky ja sinne mahtuu mukavasti kaksikin lisävuodetta. Siinä on oma wc ja suihku.
+      <b>Aurinko sviitti</b> on valoisa ja tyylikäs 25m² sviitti. Perinteisellä hirsirakennus tekniikalla rakennetut kaaret tuovat oman lisänsä, tyylikkäillä tiikki huonekaluilla sisustettuun huoneseen. <br> Siellä on parisänky ja sinne mahtuu mukavasti kaksikin lisävuodetta. Siinä on oma wc ja suihku.<br> Hinta on 90€ /2hh ja 75€ /1hh
     </div>
   </div>
   <div class="box">
@@ -122,7 +121,7 @@ Siellä on parisänky ja sinne mahtuu mukavasti kaksikin lisävuodetta. Siinä o
         </a>
       </div>
       <h2> Ametisti huone </h2>
-      <b>Ametisti huone </b>on valoisa 15m2 huone. Siellä on parisänky ja sinne mahtuu tarvittaessa lisävuode. Huoneessa on oma wc ja suihku.
+      <b>Ametisti huone </b>on valoisa ja kaunis 15m² huone. Huonetta koristaa käsinkaiverrettu reliefi ja uniikki käsinmaalattu kaappi. <br> Siellä on parisänky ja sinne mahtuu tarvittaessa lisävuode. Huoneessa on oma wc ja suihku.<br> Hinta on 85€ /2hh ja 70€/ 1hh
     </div>
   </div>
 
