--- a/villataika.fi/index.html
+++ b/villataika.fi/index.html
@@ -16,7 +16,7 @@
   <link href="favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika :taianomaista tyylikkyyttä Kotisivu" />
+  <meta name="description" content="Bed & Breakfast Villa Taika : taianomaista tyylikkyyttä Kotisivu" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="fi"/>  
   <title>Bed & Breakfast Villa Taika : Kotisivu</title>
@@ -53,7 +53,7 @@
             <a href="fi/photos.html">Kuvat</a><span>&nbsp;</span>
           </li>
           <li >
-            <a href="fi/activities.html">Tekemista</a><span>&nbsp;</span>
+            <a href="fi/activities.html">Tekemistä</a><span>&nbsp;</span>
           </li>
       </ul>
     </div>
@@ -63,9 +63,9 @@
           <span>Huoneet</span>
       </h3>
       <ul class="divided">
-        <li><a href="fi/suites.html">Suites (w.shower)</a></li>
-        <li><a href="fi/deluxe.html">Deluxe (w.toilet)</a></li>
-        <li><a href="fi/standard.html">Standard (shared)</a></li>
+        <li><a href="fi/suites.html">Sviitit (suihkulla)</a></li>
+        <li><a href="fi/deluxe.html">Deluxe (wc:llä)</a></li>
+        <li><a href="fi/standard.html">Standard (jaettu)</a></li>
       </ul>
 
       <div class="divider"></div>
@@ -80,7 +80,7 @@
       </h3>
       <div id="news"> 
         <a href="fi/news.html"> 
-          Seasonki alkaa , nyt myös mökki huone ulkona 
+          Edullinen majoitus kauniissa ulko aitassamme. 
         </a>
       </div>
       <div class="divider"></div>
