--- a/villataika.fi/fi/deluxe.html
+++ b/villataika.fi/fi/deluxe.html
@@ -16,10 +16,10 @@
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika :taianomaista tyylikkyyttä Deluxe (w.toilet)" />
+  <meta name="description" content="Bed & Breakfast Villa Taika : taianomaista tyylikkyyttä Deluxe (wc:llä)" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="fi"/>  
-  <title>Bed & Breakfast Villa Taika : Deluxe (w.toilet)</title>
+  <title>Bed & Breakfast Villa Taika : Deluxe (wc:llä)</title>
   
 </head>
 
@@ -53,7 +53,7 @@
             <a href="photos.html">Kuvat</a><span>&nbsp;</span>
           </li>
           <li >
-            <a href="activities.html">Tekemista</a><span>&nbsp;</span>
+            <a href="activities.html">Tekemistä</a><span>&nbsp;</span>
           </li>
       </ul>
     </div>
@@ -63,9 +63,9 @@
           <span>Huoneet</span>
       </h3>
       <ul class="divided">
-        <li><a href="suites.html">Suites (w.shower)</a></li>
-        <li><a href="deluxe.html">Deluxe (w.toilet)</a></li>
-        <li><a href="standard.html">Standard (shared)</a></li>
+        <li><a href="suites.html">Sviitit (suihkulla)</a></li>
+        <li><a href="deluxe.html">Deluxe (wc:llä)</a></li>
+        <li><a href="standard.html">Standard (jaettu)</a></li>
       </ul>
 
       <div class="divider"></div>
@@ -80,7 +80,7 @@
       </h3>
       <div id="news"> 
         <a href="news.html"> 
-          Seasonki alkaa , nyt myös mökki huone ulkona 
+          Edullinen majoitus kauniissa ulko aitassamme. 
         </a>
       </div>
       <div class="divider"></div>
@@ -99,7 +99,7 @@
         </a>
       </div>
       <h2> Vihreä huone </h2>
-      <b>Vihreä huone </b>on tunnelmallinen 20m2 huone. Siellä on parisänky ja sinne mahtuu lisävuode. Siinä on oma wc. Suihku on yhteiskäytössä huoneen vieressä. Yläkerran huoneesta on kaunis näkymä puutarhaan.Vihreä-ja Oranssi huone sopivat hyvin pienille ryhmille tai isolle perheelle yhteiskäytössä. Huoneiden välissä on myös sievä oleskelutila. <br>
+      <b>Vihreä huone </b>on tunnelmallinen ja rauhaisa 20m2 huone. Siellä on parisänky ja sinne mahtuu lisävuode. Siinä on oma wc. Suihku on yhteiskäytössä huoneen vieressä. <br> Yläkerran huoneesta on kaunis näkymä puutarhaan. <br>Vihreä-ja Oranssi huone sopivat hyvin pienille ryhmille tai isolle perheelle yhteiskäytössä. Huoneiden välissä on myös sievä oleskelutila. <br> Hinta on 75€ /2hh/60€ 1hh
     </div>
   </div>
   <div class="box">
@@ -110,7 +110,7 @@
         </a>
       </div>
       <h2> Oranssi huone </h2>
-      <b>Oranssi huone </b>on viihtyisä 20m2 huone. Siellä on parisänky ja sinne mahtuu kaksikin lisävuodetta. <br> Siinä on oma wc. Suihku on yhteiskäytössä huoneen vieressä. Yläkerran huoneesta on kaunis näkymä puutarhaan. Vihreä-ja Oranssi huone sopivat hyvin pienille ryhmille tai isolle perheelle yhteiskäytössä. Huoneiden välissä on myös sievä oleskelutila.
+      <b>Oranssi huone </b>on viihtyisä ja  20m2 huone. Siellä on parisänky ja sinne mahtuu kaksikin lisävuodetta. <br> Siinä on oma wc. Suihku on yhteiskäytössä huoneen vieressä. <br> Yläkerran huoneesta on kaunis näkymä puutarhaan. <br> Vihreä-ja Oranssi huone sopivat hyvin pienille ryhmille tai isolle perheelle yhteiskäytössä. Huoneiden välissä on myös sievä oleskelutila. <br> Hinta on 75€ /2hh/ 60€ 1hh
     </div>
   </div>
 
